<resources>
    <string name="app_name">Equestri-X</string>

    <string name="course_list_no_courses">No Courses.</string>

    <string name="course_list_item_image_contentdescription">null</string>
    <string name="course_tablet_course_not_selected_string">Select a Course</string>

    <string name="course_create_take_photo_tag">Take Photo</string>
    <string name="course_create_name_hint">Enter Course Name</string>
    <string name="course_create_image_contentdescription">Course Image</string>
    <string name="course_create_description_hint">Enter Course Description</string>
    <string name="course_create_flagged_checkbox_text">Flagged</string>
    <string name="course_create_keypoint_title_hint">Title</string>
    <string name="course_create_keypoint_image_contentdescription">Image of the Key Point</string>
    <string name="course_create_keypoint_description_hint">Enter Description</string>
    <string name="course_create_keypoint_done_button_text">Done</string>
    <string name="course_create_optimum_time_done_button">Done</string>
    <string name="course_create_optimum_time_button_contentdescription">Set the Optimum Time</string>
    <string name="course_create_paused_indicator">Paused</string>
    <string name="course_create_start_button">Start Recording</string>
    <string name="course_create_finish_button">Finish Recording</string>
    <string name="course_create_save_button">Save Course</string>
    <string name="course_create_cancel_button">Cancel Course</string>

    <string name="course_overview_course_image_contentdescription">Course Image</string>
    <string name="course_overview_delete_button_contentdescription">Delete the Course </string>
    <string name="course_overview_review_button">Review Course</string>
    <string name="course_overview_compete_button">Compete</string>

    <string name="course_review_default_keypoint_title">Start</string>
    <string name="course_review_previous_button">&lt;&lt;</string>
    <string name="course_review_next_button">&gt;&gt;</string>

    <string name="course_compete_elapsed_time_label">Elapsed Time</string>
    <string name="course_compete_optimum_time_label">Optimum Time</string>
    <string name="course_compete_remain_time_label">Remaining Time</string>
    <string name="course_compete_speed_label">(m/min)</string>

    <string name="course_compete_ave_speed_label">Ave. Speed</string>
    <string name="course_compete_req_ave_label">Req. Ave</string>

    <string name="course_compete_distance_label">Distance</string>
    <string name="course_compete_distance_remaining_label">Remaining</string>

    <string name="course_compete_distance_placeholder">00000m</string>
    <string name="course_compete_speed_placeholder">00</string>
    <string name="course_compete_time_placeholder">0:00</string>

    <string name="course_compete_key_header">Next Point</string>

    <string name="course_compete_countdown_time_contentdescription">Set the start Countdown Time</string>
    <string name="course_compete_start_button">Start</string>
    <string name="course_compete_countdown_button">Countdown</string>

    <string name="course_compete_start_string">Start</string>
    <string name="course_compete_finish_string">Finish</string>

    <string name="course_widget_header_text">Equestri-X</string>
    <string name="course_widget_icon_content_description">Icon to launch application.</string>
    <string name="course_widget_image">Course Image</string>
    <string name="course_widget_review_button">Review</string>
    <string name="course_widget_compete_button">Compete</string>

    <string name="map_menu_title">Map Type</string>
    <string name="map_menu_type_normal">Normal</string>
    <string name="map_menu_type_satellite">Satellite</string>
    <string name="map_menu_type_hybrid">Hybrid</string>
    <string name="map_menu_type_terrain">Terrain</string>

</resources>
