<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/map_menu_title"
        android:orderInCategory="100"
        android:id="@+id/sort_menu">

        <menu>
            <item
                android:title="@string/map_menu_type_normal"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:id="@+id/menu_map_item_normal"/>

            <item
                android:title="@string/map_menu_type_satellite"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:id="@+id/menu_map_item_satellite"/>

            <item
                android:title="@string/map_menu_type_hybrid"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:id="@+id/menu_map_item_hybrid"/>
            <item
                android:title="@string/map_menu_type_terrain"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:id="@+id/menu_map_item_terrain"/>
        </menu>
    </item>
</menu>