<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/course_info_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/create_card_corner_radius">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="@dimen/create_photo_layout_margin">
                <ImageView
                    android:id="@+id/course_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/course_create_image_contentdescription"
                    android:background="#CCCCCC"/>

                <ImageButton
                    android:id="@+id/take_course_picture_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/course_create_image_contentdescription"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:text="@string/course_create_take_photo_tag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/create_photo_text_indicator_margin_bottom"
                    android:textColor="#999999"
                    android:textSize="@dimen/create_photo_text_indicator_size"
                    android:gravity="center_horizontal|bottom"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/course_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:layout_margin="@dimen/create_course_name_edit_margin_bottom"
                    android:hint="@string/course_create_name_hint"
                    android:textColorHint="#DDDDDD"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/course_info_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""/>

                        <TextView
                            android:id="@+id/course_info_obstacles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""/>


                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/optimum_time_button"
                            android:layout_width="@dimen/optimum_time_icon_width"
                            android:layout_height="@dimen/course_main_icon_height"
                            android:src="@drawable/ic_optimum_timer"
                            android:contentDescription="@string/course_create_optimum_time_button_contentdescription"
                            android:background="@android:color/transparent"/>
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_course_description_divider_height"
            android:background="@color/colorAccent"
            android:layout_marginRight="@dimen/create_course_description_divider_marginsize"
            android:layout_marginLeft="@dimen/create_course_description_divider_marginsize"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <com.justinpriday.nanodegree.capstone.Utility.ActionEditText
                android:id="@+id/course_description_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/course_create_description_hint"
                android:textColorHint="#DDDDDD"
                android:background="#EEEEEE"
                android:padding="@dimen/create_course_description_edit_padding"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:imeOptions="actionDone"
                android:layout_marginLeft="@dimen/create_course_description_edit_marginside"
                android:layout_marginRight="@dimen/create_course_description_edit_marginside"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/course_create_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="0dp"
                android:text="@string/course_create_start_button"/>

            <Button
                android:id="@+id/course_create_cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="0dp"
                android:text="@string/course_create_cancel_button"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/course_create_pause_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@android:drawable/ic_media_pause"
                android:elevation="@dimen/create_course_pause_elevation"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>