<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context="com.justinpriday.nanodegree.capstone.CourseCreateFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:theme="@style/ToolbarTextColorTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.v7.widget.CardView
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginTop="@dimen/create_card_margins"
            android:layout_marginRight="@dimen/create_card_margins"
            android:layout_marginLeft="@dimen/create_card_margins"
            app:cardCornerRadius="@dimen/create_card_corner_radius">
            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/key_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EEEEEE"
                android:visibility="invisible"/>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginTop="-10dp"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingTop="0dp">

                <TextView
                    android:id="@+id/key_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/course_review_default_keypoint_title"
                    android:textSize="22dp"/>

                <TextView
                    android:id="@+id/key_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/key_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/key_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="6"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"/>




            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:background="@android:color/white">
            <Button
                android:id="@+id/review_previous_button"
                android:text="@string/course_review_previous_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="32sp"/>
            <RelativeLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/black">
            </RelativeLayout>
            <Button
                android:id="@+id/review_next_button"
                android:text="@string/course_review_next_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="32sp"/>
        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>